<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_pag"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/welacome"
>

    <!-- Create new account >> -->
    <TextView
        android:id="@+id/nikmati_mom"
        android:layout_width="252dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="115dp"
        android:gravity="center_horizontal|top"
        android:text="@string/nikmati_mom"
        android:textAppearance="@style/nikmati_mom" />

    <!-- Log in -->
    <TextView
        android:id="@+id/create_new_"
        android:layout_width="104dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="679dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="39dp"
        android:gravity="center_horizontal|top"
        android:text="@string/create_new_"
        android:textAppearance="@style/create_new_" />

    <!-- Rectangle 1 -->


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="626dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectangle_1" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="623dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal|top"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in" />
</RelativeLayout>





