<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/welacome"

    >

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rectangle_10" />

    <View
        android:id="@+id/line_1"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:layout_marginBottom="383dp"
        android:background="@drawable/line_4" />

    <View
        android:id="@+id/line_2"
        android:layout_width="375dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="335dp"
        android:background="@drawable/line_5" />

    <View
        android:id="@+id/line_3"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="396dp"
        android:background="@drawable/line_6"
        />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="74dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="281dp"
        android:layout_marginRight="281dp"
        android:layout_marginBottom="348dp"
        android:gravity="center_horizontal|top"
        android:text="@string/log_in2"
        android:textAppearance="@style/log_in2" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="662dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="42dp"
        android:gravity="center_horizontal|top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass" />

    <TextView
        android:id="@+id/e_mail_addr"
        android:layout_width="133dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:layout_marginBottom="292dp"
        android:gravity="center_horizontal|top"
        android:text="@string/e_mail_addr1"
        android:textAppearance="@style/e_mail_addr1" />

    <TextView
        android:id="@+id/password"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="485dp"
        android:layout_marginEnd="251dp"
        android:layout_marginRight="251dp"
        android:layout_marginBottom="219dp"
        android:gravity="center_horizontal|top"
        android:text="@string/password1"
        android:textAppearance="@style/password1" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="348dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up2"
        android:textAppearance="@style/sign_up2" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="321dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="252dp"
        android:background="@drawable/rectangle_6"
        android:elevation="4dp" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="321dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="183dp"
        android:background="@drawable/rectangle_7"
        android:elevation="4dp" />

    <Button
        android:id="@+id/rectangle_2"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="115dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="594dp"
        android:background="@drawable/rectangle_2"
        android:elevation="6dp"
        android:text="Login"
        android:textColor="@android:color/white"
/>


</RelativeLayout>
